Replaced StackView via UITableView

--- a/ios-interview-project/SNInterview/Base.lproj/Main.storyboard
+++ b/ios-interview-project/SNInterview/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sWe-pc-ES8">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sWe-pc-ES8">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,22 +17,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Zj5-a7-ti2">
-                                <rect key="frame" x="10" y="98" width="394" height="754"/>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="250" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="x6r-WJ-RYZ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CoffeeShopItemView" id="h2D-n5-AfO">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="h2D-n5-AfO" id="lOS-NG-zB9" customClass="CoffeeShopItemView" customModule="SNInterview" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="v3d-Su-blt"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="OJj-rE-g5s"/>
+                                </connections>
+                            </tableView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="mFk-oS-YO4"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Zj5-a7-ti2" firstAttribute="leading" secondItem="mFk-oS-YO4" secondAttribute="leading" constant="10" id="Au3-8w-y8d"/>
-                            <constraint firstItem="mFk-oS-YO4" firstAttribute="trailing" secondItem="Zj5-a7-ti2" secondAttribute="trailing" constant="10" id="Tej-np-SpK"/>
-                            <constraint firstItem="Zj5-a7-ti2" firstAttribute="top" secondItem="mFk-oS-YO4" secondAttribute="top" constant="10" id="jgZ-8h-b0t"/>
-                            <constraint firstItem="mFk-oS-YO4" firstAttribute="bottom" secondItem="Zj5-a7-ti2" secondAttribute="bottom" constant="10" id="kWc-x2-Fwq"/>
+                            <constraint firstItem="x6r-WJ-RYZ" firstAttribute="top" secondItem="mFk-oS-YO4" secondAttribute="top" id="57F-jW-dTG"/>
+                            <constraint firstItem="mFk-oS-YO4" firstAttribute="trailing" secondItem="x6r-WJ-RYZ" secondAttribute="trailing" id="GAP-oq-QaZ"/>
+                            <constraint firstItem="x6r-WJ-RYZ" firstAttribute="leading" secondItem="mFk-oS-YO4" secondAttribute="leading" id="jLM-js-3kw"/>
+                            <constraint firstItem="mFk-oS-YO4" firstAttribute="bottom" secondItem="x6r-WJ-RYZ" secondAttribute="bottom" id="sgq-tX-owe"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="mFk-oS-YO4"/>
                     </view>
                     <navigationItem key="navigationItem" title="Coffee Shops ☕️" id="5g7-EK-T8y"/>
                     <connections>
-                        <outlet property="stackView" destination="Zj5-a7-ti2" id="KBp-Hh-KWe"/>
+                        <outlet property="coffeeShopeTableView" destination="x6r-WJ-RYZ" id="Clp-Jq-hVj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -44,8 +58,8 @@
         <scene sceneID="MJa-tv-hQK">
             <objects>
                 <navigationController id="sWe-pc-ES8" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zwQ-q5-Aah">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="zwQ-q5-Aah">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -54,6 +68,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ROT-4l-zBj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="665" y="52"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
