--- a/ios-interview-project/SNInterview/View/CoffeeShopItemView.xib
+++ b/ios-interview-project/SNInterview/View/CoffeeShopItemView.xib
@@ -17,19 +17,19 @@
                     <rect key="frame" x="10" y="5" width="388" height="167"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tCp-fr-z45" userLabel="Name">
-                            <rect key="frame" x="0.0" y="0.0" width="388" height="27"/>
+                            <rect key="frame" x="0.0" y="0.0" width="388" height="42"/>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwo-bv-KwT" userLabel="Name">
-                            <rect key="frame" x="0.0" y="37" width="388" height="87"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwo-bv-KwT" userLabel="Name">
+                            <rect key="frame" x="0.0" y="52" width="388" height="42"/>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="80 %" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KmV-I4-37A" userLabel="Rating">
-                            <rect key="frame" x="0.0" y="134" width="388" height="33"/>
+                            <rect key="frame" x="0.0" y="104" width="388" height="63"/>
                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
